syntax = "proto3";
import "google/protobuf/empty.proto";

package NucuCarSensorsProto;

// General
enum SensorStateEnum {
    Error = 0;
    Uninitialized = 1;
    Initialized = 2;
    Disabled = 3;
}

// Environment Sensor
service EnvironmentSensorGrpcService {
    rpc GetState(google.protobuf.Empty) returns (NucuCarSensorState) {}
    rpc GetMeasurement(google.protobuf.Empty) returns (NucuCarSensorResponse) {}
}

message NucuCarSensorResponse {
    SensorStateEnum State = 1;
    string JsonData = 2;
}

message NucuCarSensorState {
    SensorStateEnum state = 1;
}